# atelier

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: pyproject.toml
backend/acp-runtime/: package-lock.json  package.json
backend/src/: main.py  settings.py
backend/src/application/http/: schemas.py
backend/src/application/ws/: agents.py  chats.py
backend/src/domain/: models.py
backend/src/domain/agents/: __init__.py  artifacts.py  compactions.py  configs.py  context_render.py  doc_state.py  events.py  handoffs.py  ports.py  specs.py  system_prompt.py  user_actions.py
backend/src/domain/artifacts/: __init__.py  models.py  pr_status.py  status.py
backend/src/domain/chatstore/: __init__.py  _serde.py  dtos.py  ports.py  service.py
backend/src/domain/connections/: __init__.py  configs.py  descriptors.py  dtos.py  ports.py  service.py
backend/src/domain/projectstore/: __init__.py  _serde.py  dtos.py  ports.py  reconcile.py  service.py
backend/src/domain/settings/: __init__.py  models.py  ports.py
backend/tests/: conftest.py
backend/tests/contract/: test_agent_adapter.py
backend/tests/integration/: conftest.py  test_agents_routes.py  test_chats_routes.py  test_connections_routes.py  test_database.py  test_fs_routes.py  test_health.py  test_mapping.py  test_projects_routes.py  test_providers_route.py  test_settings_routes.py  test_shared_folders_routes.py  test_stub_adapter.py  test_transcript_log.py  test_user_settings_repository.py  test_work_repository.py  test_works_routes.py  test_workspace_files.py  test_workstore_e2e.py
docs/: README.md  (+6 more)
(+294 files in other folders)
