[project]
name = "atelier-backend"
version = "0.1.0"
description = "Atelier — local multi-agent work orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "claude-agent-sdk>=0.1.72",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.domain.*"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
